Steps to Reproduce: #ngctl mkpeer ipfw: patch 7 in #ngctl name ipfw:7 tcp_rst #ngctl connect ipfw: tcp_rst: 8 out #ngctl msg tcp_rst: setconfig { count=1 csum_flags=0 ops=[ { mode=8 value=4 length=1 offset=33 } ] } ngctl: send msg: Argument list too long

It's broken after base r309389 and could be fixed in base r309408, but the first one went to 10.4 and the second one didn't.

PR:		224019
Submitted by:	sd@mostnet.ru